[package]
name = "hedylogos-api"
version = "0.1.0"
edition = "2021"
authors = ["Andrii Melnyk <andrey.melnik@icloud.com>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5", features = ['http', 'axum'] }
worker-macros = { version = "0.5", features = ['http'] }
axum = { version = "0.8", default-features = false, features = [
    "query",
    "json",
    "macros",
] }
tower-service = "0.3"
console_error_panic_hook = { version = "0.1" }
oauth2 = "5.0"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
oneshot = "0.1"
